--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
           </div>
         </div>
       </section>
+      <!-- Play Instantly -->
+      <section class="container play-instant">
+        <div class="play-instant-content">
+          <h2 class="section__title">
+            <span class="gradient-text">Play Instantly,</span> <br />
+            No Downloads
+            <br />
+            No Installs.
+          </h2>
+          <p class="section__des">
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
+        </div>
+        <div class="play-instant-img">
+          <img class="big-img" src="./images/Rectangle55.png" />
+          <img src="./images/Rectangle66.png" class="abs-img" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
