--- a/index.html
+++ b/index.html
@@ -153,6 +153,63 @@
           <img src="./images/Rectangle66.png" class="abs-img" />
         </div>
       </section>
+      <!-- Games Section -->
+      <section class="container games">
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle11.png" />
+          </div>
+          <p class="game-name">Action Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle12.png" />
+          </div>
+          <p class="game-name">Adventure Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle13.png" />
+          </div>
+          <p class="game-name">Arcade Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle14.png" />
+          </div>
+          <p class="game-name">Educational Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle15.png" />
+          </div>
+          <p class="game-name">Word Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle16.png" />
+          </div>
+          <p class="game-name">Role Palying Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle17.png" />
+          </div>
+          <p class="game-name">Music & Audio Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle18.png" />
+          </div>
+          <p class="game-name">Puzzle Games</p>
+        </div>
+        <div class="game">
+          <div class="game-img">
+            <img src="./images/Rectangle19.png" />
+          </div>
+          <p class="game-name">Strategy Games</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
