--- a/index.html
+++ b/index.html
@@ -211,5 +211,31 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="logo"><img src="./images/Frame.png" /><span>G</span>amer</div>
+      <ul class="footer-link top-footer-link">
+        <li>our Story</li>
+        <li>Games</li>
+        <li>Web Games</li>
+        <li>Carrers</li>
+        <li>Support</li>
+        <li>My Account</li>
+      </ul>
+      <div class="social-link">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-apple"></i>
+      </div>
+      <ul class="footer-link">
+        <li>Terms and Conditions</li>
+        <li>Privacy Policy</li>
+        <li>Cookie Policy</li>
+        <li>Privacy Settings</li>
+      </ul>
+      <p class="copy-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+    </footer>
   </body>
 </html>
