--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <i class="fa-solid fa-circle-play"></i>
                 <span>Watch Now</span>
               </div>
-              <img src="./images/Rectangle7.png" />
+              <img src="./images/my-games.png" />
             </div>
             <p class="card-text">Breaking game records like OG</p>
           </div>
@@ -151,6 +151,29 @@
         <div class="play-instant-img">
           <img class="big-img" src="./images/Rectangle55.png" />
           <img src="./images/Rectangle66.png" class="abs-img" />
+        </div>
+      </section>
+      <!-- Play Instantly 2-->
+      <section class="container play-instant play-instant-two">
+        <div class="play-instant-img-two">
+          <img class="big-img" src="./images/Rectangle67.png" />
+          <img src="./images/Rectangle78.png" class="abs-img" />
+        </div>
+        <div class="play-instant-content instant-two">
+          <h2 class="section__title">
+            <span class="gradient-text"
+              >Play Games <br />
+              Online</span
+            >
+            Anywhere,
+            <br />
+            Anytime!
+          </h2>
+          <p class="section__des">
+            PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
+            can play your favorite games online for free, any time, anywhere ,
+            on any device.
+          </p>
         </div>
       </section>
       <!-- Games Section -->
