fix design error

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
               </div>
               <img src="./images/my-games.png" />
             </div>
-            <p class="card-text">Breaking game records like OG</p>
+            <p class="card-text">
+              Breaking game records <br />
+              like OG
+            </p>
           </div>
           <div class="card">
             <div class="card-img">
